2007-10-12  Tom Tromey  <tromey@redhat.com>

	* c-format.h (c_format_finalize): Declare.
	* c-format.c (struct format_state): New struct.
	(global_format_state): New global.
	(construct_format_state): New function.
	(c_format_finalize): Likewise.
	(obdup_mem): Likewise.
	(init_dynamic_asm_fprintf_info): Use global_format_state.
	(init_dynamic_gfc_info): Likewise.
	(init_dynamic_diag_info): Likewise.
	(handle_format_attribute): Call construct_format_state.  Allocate
	on obstack.

2007-10-12  Tom Tromey  <tromey@redhat.com>

	* c-format.c (dollar_argument_info): New struct.
	(dollar_arguments_used, dollar_arguments_pointer_p,
	dollar_arguments_alloc, dollar_arguments_count,
	dollar_first_arg_num, dollar_max_arg_used, dollar_format_warned):
	Remove.
	(init_dollar_format_checking): Add 'state' argument.
	(maybe_read_dollar_number): Likewise.
	(finish_dollar_format_checking): Likewise.
	(check_format_info_inner): Likewise.  Renamed from
	check_format_info_main.
	(check_format_info_main): New function.

2007-10-11  Tom Tromey  <tromey@redhat.com>

	* Makefile.in (LIBS): Add -lpthread.
	* system.h (GCC_THREAD): New define.
	* ggc-page.c (ggc_alloc_stat): Lock.
	(ggc_get_size): Lock.
	(ggc_free): Lock.
	(ggc_collect): Call ggc_thread_pause, ggc_collection_completed.
	* ggc-zone.c (ggc_alloc_zone_stat): Lock.
	(ggc_free): Lock.
	(ggc_get_size): Lock.
	(new_ggc_zone): Lock.
	(destroy_ggc_zone): Lock.
	(ggc_collect): Call ggc_thread_pause, ggc_collection_completed.
	* ggc-common.c (global_root_list): New global.
	(ggc_mark_roots): Mark thread-local roots.
	(roots, ggc_n_threads, ggc_gc_lock, gc_condition,
	ggc_n_waiting_threads, collection_generation): New globals.
	(ggc_thread_init): New function.
	(ggc_thread_start): Likewise.
	(ggc_thread_clean_up): Likewise.
	(ggc_thread_pause): Likewise.
	(ggc_collection_completed): Likewise.
	(ggc_thread_ignore_me): Likewise.
	* ggc.h: Include host-thread.h.
	(struct ggc_thread_roots): New.
	(struct ggc_thread_root_list): New.